Trying to use absolute copy path

--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ allprojects {
     
     jar {
         dependsOn ":copyBuildXml"
-        destinationDir = 'output'
+        destinationDir = file '${projectDir}/output'
     }
 }
  
@@ -94,6 +94,12 @@ task apiZip(type: Zip) {
  
 artifacts {
     archives apiZip
+}
+
+task copyBuilds(type: Copy) {
+    from projectDir
+    include '**/output/*.jar'
+    into 'output'
 }
 
 build.dependsOn "apiZip", "copyBuildXml", "apiZip"
