--- a/build.gradle
+++ b/build.gradle
@@ -106,4 +106,4 @@ task copyBuilds(type: Copy) {
   }
 }
 
-build.dependsOn "apiZip", "copyBuildXML", "apiZip", "copyBuilds"
+tasks.build.dependsOn "apiZip", "copyBuildXML", "apiZip", "copyBuilds"
