Removed more dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -104,4 +104,4 @@ task copyBuilds(type: Copy) {
   }
 }
 
-build.dependsOn "apiZip", "copyBuildXML", "apiZip", "copyBuilds"
+build.dependsOn "apiZip", "copyBuildXML"
