--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
  
 apply plugin: 'forge'
 apply plugin: 'maven'
- 
+
 ext.buildProps = file "build.properties"
  
 buildProps.withReader {
@@ -64,7 +64,7 @@ allprojects {
     
     jar {
         dependsOn ":copyBuildXml"
-        destinationDir = file 'output'
+        destinationDir = file '${projectDir}/output'
     }
 }
  
@@ -95,16 +95,11 @@ task apiZip(type: Zip) {
 artifacts {
     archives apiZip
 }
- 
+
 task copyBuilds(type: Copy) {
-  dependsOn "reobf"
-  
-  doLast {
-  from projectDir
-  include '**/output/*.jar'
-  into 'output'
-  }
+    from projectDir
+    include '**/output/*.jar'
+    into 'output'
 }
- 
-build.dependsOn "apiZip", "copyBuildXML"
-tasks.build.dependsOn "copyBuilds"
+
+build.dependsOn "apiZip", "copyBuildXml", "apiZip"
