--- a/build.gradle
+++ b/build.gradle
@@ -10,127 +10,70 @@ buildscript {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.0-SNAPSHOT'
     }
 }
- 
+
 apply plugin: 'forge'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
 
 ext.buildProps = file "build.properties"
- 
+
 buildProps.withReader {
     def prop = new Properties()
     prop.load(it)
     ext.config = new ConfigSlurper().parse prop
 }
- 
+
+version = "${config.version.mod.major}.${config.version.mod.minor}.${config.version.mod.revis}"
 group = "icbm"
 archivesBaseName = "ICBM"
- 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 minecraft {
-    version = "${rootProject.config.version.minecraft}-${rootProject.config.version.forge}"
-    
-    replaceIn "Reference.java"
-    replace "@MAJOR@", rootProject.config.version.mod.major
-    replace "@MINOR@", rootProject.config.version.mod.minor
-    replace "@REVIS@", rootProject.config.version.mod.revis
-    replace "@BUILD@", "${System.getenv().BUILD_NUMBER}"
-}
- 
-allprojects {
-    apply plugin: 'java'
-    
-    version = "${config.version.mod.major}.${config.version.mod.minor}.${config.version.mod.revis}"
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
-    
-    if (System.getenv("BUILD_NUMBER") != null)
-        version += ".${System.getenv("BUILD_NUMBER")}"
-        
-    repositories {
-        maven {
-            name 'Calclavia Maven'
-            url 'http://calclavia.com/maven'
-        }
-        maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
-        mavenCentral()
-    }
-    
-    dependencies {
-        compile group: 'universalelectricity', name: 'Universal-Electricity', version: "${rootProject.config.version.universalelectricity}", classifier: "dev"
-        compile group: 'calclaviacore', name: 'calclavia-core', version: "${rootProject.config.version.calclaviacore}", classifier: "dev"
-    }
-    
-    jar {
-		classifier = project.name
-        dependsOn ":copyBuildXml"
-        destinationDir = file (rootProject.getRootDir().getPath() + '/output')
-    }
+    version = "${config.version.minecraft}-${config.version.forge}"
 	
-	publishing {
-		publications {
-			mavenJava(MavenPublication) {
-				artifact jar
-			}
-		}
-		repositories {
-			maven {
-				url "file://var/www/maven"
-			}
-		}
-	}
+	replaceIn "Reference.java"
+	replace "@MAJOR@", config.version.mod.major
+	replace "@MINOR@", config.version.mod.minor
+	replace "@REVIS@", config.version.mod.revis
+	replace "@BUILD@", System.getenv("BUILD_NUMBER")
 }
- 
-subprojects {
-    archivesBaseName = "ICBM"
-    
-    dependencies {
-        compile rootProject
-    }
-    
-    rootProject.tasks.reobf {
-        reobf(tasks.jar) { spec ->
-            spec.classpath = sourceSets.main.compileClasspath
-        }
-    }
-}
- 
+
+if (System.getenv("BUILD_NUMBER") != null)
+    version += ".${System.getenv("BUILD_NUMBER")}"
+
+
 processResources {
 	from 'build.properties'
 }
- 
+
 task copyBuildXml(type: Copy) {
     from 'build.properties'
     into 'output'
 }
- 
+
 task apiZip(type: Zip) {
     classifier = 'api'
     from sourceSets*.allSource
     include 'icbm/api/**'
     destinationDir = file 'output'
 }
- 
+
 artifacts {
     archives apiZip
 }
 
-import net.minecraftforge.gradle.tasks.dev.ChangelogTask
-import net.minecraftforge.gradle.common.Constants
-import net.minecraftforge.gradle.delayed.*
-
-task createChangelog(type: ChangelogTask) {
-    def jobName = "${System.getenv().JOB_NAME}"
-    def buildNumber = "${System.getenv().BUILD_NUMBER}"
-    
-    setServerRoot(new DelayedString(project, 'http://ci.calclavia.com/'))
-    setJobName(new DelayedString(project, jobName.toString()));
-    setAuthName(new DelayedString(project, 'console_script'));
-    setAuthPassword(new DelayedString(project, '625d2ac53190be3422faa0c474fb299b'));
-    setTargetBuild({buildNumber.toString()});
-    setOutput(new DelayedFile(project, 'output/' + jobName + '-changelog-' + "${project.version}" + '.txt'));
+jar {
+    dependsOn copyBuildXml
+    classifier = ''
+    destinationDir = file 'output'
 }
 
-build.dependsOn "apiZip", "copyBuildXml", "createChangelog"
+repositories {
+    maven {
+		name 'Calclavia Maven'
+		url 'http://calclavia.com/maven'
+	}
+}
+dependencies {
+	compile group: 'universalelectricity', name: 'Universal-Electricity', version: "${config.version.universalelectricity}", classifier: "dev"
+	compile group: 'calclaviacore', name: 'calclavia-core', version: "${config.version.calclaviacore}", classifier: "dev"
+}
