--- a/build.gradle
+++ b/build.gradle
@@ -129,7 +129,7 @@ task createChangelog(type: ChangelogTask) {
     setAuthName(new DelayedString(project, 'console_script'));
     setAuthPassword(new DelayedString(project, '625d2ac53190be3422faa0c474fb299b'));
     setTargetBuild({buildNumber.toString()});
-    setOutput(new DelayedFile(project, 'output/' + jobName + '-changelog-' + "${project.version}" + '.txt'));
+    setOutput(new DelayedFile(project, 'output/' + jobName + "-${project.version}" + '-changelog' + '.txt'));
 }
 
 build.dependsOn "apiZip", "copyBuildXml", "createChangelog"
