--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/main/resources/assets/icbm/languages"]
 	path = src/main/resources/assets/icbm/languages
-	url = https://tgame14@bitbucket.org/uegroup/icbm-localizations.git
+url=https://github.com/calclavia/ICBM-Localization
