Fixed base archive name in build script

--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ allprojects {
 }
  
 subprojects {
-    archivesBaseName = "ICBM"
+    archivesBaseName = "${System.getenv().JOB_NAME}"
     
     dependencies {
         compile rootProject
