Another dependency fix

--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,7 @@ repositories {
 dependencies {
 	compile group: 'universalelectricity', name: 'Universal-Electricity', version: "${config.version.universalelectricity}", classifier: "dev"
     if (ENV.JOB_NAME == "ICBM-Development")
-        compile group: 'calclaviacore', name: 'calclavia-core-development', version: "${config.version.calclaviacore}", classifier: "dev"
+        compile group: 'calclavia-core-development', name: 'calclavia-core', version: "${rootProject.config.version.calclaviacore}", classifier: "dev"
     else
         compile group: 'calclaviacore', name: 'calclavia-core', version: "${config.version.calclaviacore}", classifier: "dev"
 }
