Revert "Temporary change to force ICBM to build against dev"
This reverts commit 6f64cec25708d162da7b075da9948f02eafd74a3.

--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ repositories {
 }
 dependencies {
 	compile group: 'universalelectricity', name: 'Universal-Electricity', version: "${config.version.universalelectricity}", classifier: "dev"
-    if (true)
+    if (ENV.JOB_NAME == "ICBM-Development")
         compile group: 'calclavia-core-development', name: 'calclavia-core', version: "${rootProject.config.version.calclaviacore}", classifier: "dev"
     else
         compile group: 'calclaviacore', name: 'calclavia-core', version: "${config.version.calclaviacore}", classifier: "dev"
