--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,6 @@ repositories {
 dependencies 
 {
     testCompile 'junit:junit:4.11'
-    //compile "mcp.mobius.waila:Waila:1.5.5_1.7.10"
+    compile "mcp.mobius.waila:Waila:1.5.5_1.7.10"
     compile "li.cil.oc:OpenComputers:MC1.7.10-1.4.0.+:dev"
 }
