--- a/build.gradle
+++ b/build.gradle
@@ -113,4 +113,5 @@ dependencies
     testCompile 'junit:junit:4.11'
     compile "mcp.mobius.waila:Waila:1.5.5_1.7.10"
     compile "li.cil.oc:OpenComputers:MC1.7.10-1.4.0.+:dev"
+    compile 'org.jmock:jmock:2.6.0'
 }
