--- a/build.gradle
+++ b/build.gradle
@@ -80,20 +80,20 @@ jar {
 repositories {
     maven {
 		name 'Calclavia Maven'
-		url 'http://calclavia.com/maven'
+		url 'http://calclavia.com/maven/'
 	}
 }
 dependencies {
     if (System.getenv().JOB_NAME != null && System.getenv().JOB_NAME == "ICBM-Development")
         compile group: 'resonant-engine-development', name: 'resonant-engine', version: "${config.version.resonantengine}", classifier: "dev"
     else
-        compile group: 'resonant-engine', name: 'resonant-engine', version: "${config.version.resonantengine}", classifier: "dev"
+        compile group: 'dev.calclavia.resonantengine', name: 'resonant-engine', version: "${config.version.resonantengine}", classifier: "dev"
 }
 
 
 repositories {
     maven {
-        url 'http://calclavia.com/maven'
+        url 'http://calclavia.com/maven/'
     }
     maven {
         name "Mobius Repo"
