--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ notifications:
   channels:
    - "irc.esper.net#icbm"
   template:
-   - "%{build_number} (%{branch} - %{commit} : %{author}): %{message} (%{build_url})"
+   - "%{build_number} (%{branch} - %{commit}: %{commit_message} : %{author}): %{message} (%{build_url})"
   email: false
 install: true
 script:
