--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 }
 
 apply plugin: 'forge'
+apply plugin: 'maven-publish'
 
 
 def ENV = System.getenv()
@@ -29,9 +30,16 @@ buildProps.withReader {
     ext.config = new ConfigSlurper().parse prop
 }
 
-version = "${config.version.mod.major}.${config.version.mod.minor}.${config.version.mod.revis}"
+version = "${config.version.minecraft}-${config.version.mod.major}.${config.version.mod.minor}.${config.version.mod.revis}b"
 group = "icbm"
 archivesBaseName = "ICBM"
+
+if (project.hasProperty("bambooBuildNumber"))
+    version += project.bambooBuildNumber
+else
+    version += "NIGHTLY"
+    
+println "version = "+ version
 
 minecraft {
     version = "${config.version.minecraft}-${config.version.forge}"
@@ -82,6 +90,23 @@ dependencies {
       compile group: 'dev.calclavia.resonantengine', name: 'resonant-engine', version: "${config.version.resonantengine}", classifier: "dev"
 }
 
+
+publishing {
+    publications {
+        mavenJava(MavenPublication)
+        {
+            artifact jar
+            artifact deobfJar
+            artifact javadocJar
+        }
+    }
+
+    repositories {
+        maven {
+            url "file:///var/www/html/maven"
+        }
+    }
+}
 
 repositories {
     maven {
