Comment out artifact javadocJar

--- a/build.gradle
+++ b/build.gradle
@@ -97,7 +97,7 @@ publishing {
         {
             artifact jar
             artifact deobfJar
-            artifact javadocJar
+//            artifact javadocJar
         }
     }
 
