--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,10 @@ dependencies {
       compile group: 'dev.calclavia.resonantengine', name: 'resonant-engine', version: "${config.version.resonantengine}", classifier: "dev"
 }
 
+task deobfJar(type: Jar) {
+    from sourceSets.main.output
+    classifier = 'deobf'
+}
 
 publishing {
     publications {
