Fix deobf jar output dir

--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,7 @@ dependencies {
 task deobfJar(type: Jar) {
     from sourceSets.main.output
     classifier = 'deobf'
+    destinationDir = file 'output'
 }
 
 publishing {
