Add makePretty to nuke output folder so it doesn't archive the old jars

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ buildscript {
 apply plugin: 'forge'
 apply plugin: 'maven-publish'
 
+task makePretty(type: Delete) {
+  delete 'output'
+}
 
 def ENV = System.getenv()
 
