Making clean depend on MakePretty to have it clear the output folder.

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ task makePretty(type: Delete) {
   delete 'output'
 }
 
+clean{
+   dependsOn makePretty
+}
+
 def ENV = System.getenv()
 
 ext.buildProps = file "build.properties"
