Fix the mcmod.info and the build.gradle to have the proper values

--- a/build.gradle
+++ b/build.gradle
@@ -93,7 +93,22 @@ jar {
     destinationDir = file 'output'
 }
 
+processResources {
+	from(sourceSets.main.resources.srcDirs) {
+		//include '**/*.lang'
+		include '**/*.info'
+		include '**/*.properties'
 
+		expand 'version': project.version, 'mcversion': config.version.minecraft
+		// replace version and MCVersion
+	}
+
+	// copy everything else, thats not text
+	from(sourceSets.main.resources.srcDirs) {
+		exclude '**/*.info'
+		exclude '**/*.properties'
+	}
+}
 
 repositories {
     maven {
