--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ println "version = "+ version
 minecraft {
     version = "${config.version.minecraft}-${config.version.forge}"
 	
-	replaceIn "Reference.java"
+	replaceIn "ICBM.java"
 	replace "@MAJOR@", config.version.mod.major
 	replace "@MINOR@", config.version.mod.minor
 	replace "@REVIS@", config.version.mod.revis
