--- a/build.gradle
+++ b/build.gradle
@@ -127,6 +127,7 @@ publishing {
                 classifier "build"
                 extension "properties"
             }
+            from project.components.java
         }
     }
 
@@ -160,5 +161,5 @@ dependencies
     testCompile 'junit:junit:4.11'
     compile "mcp.mobius.waila:Waila:1.5.5_1.7.10"
     compile "li.cil.oc:OpenComputers:MC1.7.10-1.4.0.+:dev"
-     compile group: 'dev.calclavia.resonantengine', name: 'resonant-engine', version: "${config.version.resonantengine}", classifier: "dev"
+    runtime group: 'dev.calclavia.resonantengine', name: 'resonant-engine', version: "${config.version.resonantengine}", classifier: "dev"
 }
