--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,14 @@ task makePretty(type: Delete) {
   delete 'output'
 }
 
+if (project.getProperty("bambooshortPlanName") == "ICBM-Dev"){
+    group = "dev.BuiltBrokenModding.icbm"
+    archivesBaseName = ICBM-dev
+} else {
+    group = "com.BuiltBrokenModding.icbm"
+    archivesBaseName = ICBM
+}
+
 clean{
    dependsOn makePretty
 }
@@ -122,7 +130,6 @@ publishing {
         {
             artifact jar
             artifact deobfJar
-            artifactId 'ICBM'
             artifact("output/build.properties") {
                 classifier "build"
                 extension "properties"
