--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply from: './BuiltBrokenScripts/index.gradle'
 apply plugin: 'forge'
-apply plugin: 'maven-publish'
+
 
 ext.buildProps = file "build.properties"
 
@@ -25,10 +25,6 @@ buildProps.withReader {
     def prop = new Properties()
     prop.load(it)
     ext.config = new ConfigSlurper().parse prop
-}
-
-task makePretty(type: Delete) {
-  delete 'output'
 }
 
 if (project.getProperty("bambooshortPlanName") == "ICBM-Dev"){
@@ -39,32 +35,13 @@ if (project.getProperty("bambooshortPlanName") == "ICBM-Dev"){
     archivesBaseName = "ICBM"
 }
 
-clean{
-   dependsOn makePretty
+version = "${config.version.minecraft}-${config.version.mod.major}.${config.version.mod.minor}.${config.version.mod.revis}b"
+
+processResources {
+	from 'build.properties'
 }
 
-if (project.hasProperty("bambooBuildNumber"))
-    version += project.bambooBuildNumber
-else
-    version += "NIGHTLY"
-    
 println "version = "+ version
-
-task apiZip(type: Zip) {
-    classifier = 'api'
-    from sourceSets*.allSource
-    include 'icbm/api/**'
-    destinationDir = file 'output'
-}
-
-artifacts {
-    archives apiZip
-}
-
-task copyBuildXml(type: Copy) {
-    from 'build.properties'
-    into 'output'
-}
 
 processResources {
 	from(sourceSets.main.resources.srcDirs) {
