[Test] Checking too see if this will execute the jar

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,10 @@ processResources {
 	}
 }
 
+task runJar(dependsOn:jar) << {
+  javaexec { main="-jar"; args "bin-maven/MavenPageMaker.jar" } 
+}
+
 repositories {
     maven {
         url 'http://calclavia.com/maven/'
