--- a/build.gradle
+++ b/build.gradle
@@ -93,7 +93,7 @@ dependencies
     testCompile 'junit:junit:4.11'
     compile "mcp.mobius.waila:Waila:1.5.8a_1.7.10"
     compile "li.cil.oc:OpenComputers:MC1.7.10-1.4.0.+:dev"
-    compile "dev.builtbroken.voltzengine:VoltzEngine:1.7.10-0.+:dev"
+    compile "dev.builtbroken.voltzengine:VoltzEngine:1.7.10-0.+:deobf-dev"
 }
 
 
