Added code to build script to add data created to the pom file

--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,19 @@ processResources {
 	}
 }
 
+publishing {
+  publications {
+    myPublication(MavenPublication) {      
+      pom.withXml {
+        from components.java
+        asNode().appendNode('description', 'Created on ' + getDate())        
+        def deps = configurations.compile.allDependencies
+        def dep_node = asNode().appendNode('dependencies')
+      }
+    }
+  }
+}
+
 repositories {
     maven {
         name "BuiltBroken"
