--- a/build.gradle
+++ b/build.gradle
@@ -126,7 +126,12 @@ dependencies
     testCompile 'junit:junit:4.11'
     compile "mcp.mobius.waila:Waila:1.5.8a_1.7.10"
     compile "li.cil.oc:OpenComputers:MC1.7.10-1.4.0.+:dev"
+    if (project.getProperty("bambooshortPlanName") == "BBM-Dev"){
     compile "dev.builtbroken.voltzengine:VoltzEngine:1.7.10-0.+:deobf-dev"
+    }
+    else
+    {
+    compile "com.builtbroken.voltzengine:VoltzEngine:1.7.10-0.+:deobf"}
 }
 
 def getDate() {
